// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots Pagination with 0 items 1`] = `
.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  padding: 0.5em 1em;
  border: 1px currentColor solid;
  background-color: transparent;
  border-radius: 2px;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  text-align: center;
  cursor: pointer;
  outline: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-color: #B4B4B4;
  color: #535353;
}

.c2:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c2 .c4 {
  color: #535353;
}

.c2:hover:enabled,
.c2:active:enabled {
  background-color: #F1F1F1;
}

.c2:active:enabled,
.c2:focus:enabled {
  box-shadow: 0 0 0 4px rgba(180,180,180,0.2);
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  padding-right: 0.6em;
}

.c3 {
  padding: 0.5em;
}

<div
  class="c0"
>
  <span
    class="c1"
  >
    Viewing 0-0 of 0
  </span>
  <button
    class="c2 c3"
    disabled=""
    type="button"
  >
    <span>
      <svg
        aria-hidden="false"
        aria-labelledby="title"
        focusable="false"
        role="img"
        style="vertical-align:middle;fill:currentColor;width:20px;height:20px;transform:rotate(90deg)"
        viewBox="0 0 217 217"
      >
        <title>
          Prev
        </title>
        <g
          transform="matrix(1,0,0,1,108.55,108.721)"
        >
          <g
            transform="matrix(6.12323e-17,-1,1,6.12323e-17,0,0)"
          >
            <path
              d="M138.141,158.426c-0.650773,0.080458 -1.30311,-0.136988 -1.77545,-0.591818l-59.1818,-46.7536c-0.731607,-0.570007 -1.16659,-1.43998 -1.18364,-2.36727c0.147609,-0.890133 0.560095,-1.71511 1.18364,-2.36727l59.1818,-46.7536c1.30741,-0.980556 3.16217,-0.71559 4.14273,0.591818c0.980556,1.30741 0.71559,3.16217 -0.591818,4.14273l-56.2227,44.3864l56.2227,44.3864c1.0494,1.11878 1.28598,2.77487 0.591818,4.14273c-0.652167,0.623542 -1.47714,1.03603 -2.36727,1.18364v0Z"
              transform="matrix(1,0,0,1,-108.55,-108.721)"
            />
          </g>
        </g>
      </svg>
    </span>
  </button>
  <button
    class="c2 c3"
    disabled=""
    type="button"
  >
    <span>
      <svg
        aria-hidden="false"
        aria-labelledby="title"
        focusable="false"
        role="img"
        style="vertical-align:middle;fill:currentColor;width:20px;height:20px;transform:rotate(-90deg)"
        viewBox="0 0 217 217"
      >
        <title>
          Next
        </title>
        <g
          transform="matrix(1,0,0,1,108.55,108.721)"
        >
          <g
            transform="matrix(6.12323e-17,-1,1,6.12323e-17,0,0)"
          >
            <path
              d="M138.141,158.426c-0.650773,0.080458 -1.30311,-0.136988 -1.77545,-0.591818l-59.1818,-46.7536c-0.731607,-0.570007 -1.16659,-1.43998 -1.18364,-2.36727c0.147609,-0.890133 0.560095,-1.71511 1.18364,-2.36727l59.1818,-46.7536c1.30741,-0.980556 3.16217,-0.71559 4.14273,0.591818c0.980556,1.30741 0.71559,3.16217 -0.591818,4.14273l-56.2227,44.3864l56.2227,44.3864c1.0494,1.11878 1.28598,2.77487 0.591818,4.14273c-0.652167,0.623542 -1.47714,1.03603 -2.36727,1.18364v0Z"
              transform="matrix(1,0,0,1,-108.55,-108.721)"
            />
          </g>
        </g>
      </svg>
    </span>
  </button>
</div>
`;

exports[`Snapshots Pagination with 300 items, at first page with 10 items 1`] = `
.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  padding: 0.5em 1em;
  border: 1px currentColor solid;
  background-color: transparent;
  border-radius: 2px;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  text-align: center;
  cursor: pointer;
  outline: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-color: #B4B4B4;
  color: #535353;
}

.c2:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c2 .c4 {
  color: #535353;
}

.c2:hover:enabled,
.c2:active:enabled {
  background-color: #F1F1F1;
}

.c2:active:enabled,
.c2:focus:enabled {
  box-shadow: 0 0 0 4px rgba(180,180,180,0.2);
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  padding-right: 0.6em;
}

.c3 {
  padding: 0.5em;
}

<div
  class="c0"
>
  <span
    class="c1"
  >
    Viewing 1-10 of 300
  </span>
  <button
    class="c2 c3"
    disabled=""
    type="button"
  >
    <span>
      <svg
        aria-hidden="false"
        aria-labelledby="title"
        focusable="false"
        role="img"
        style="vertical-align:middle;fill:currentColor;width:20px;height:20px;transform:rotate(90deg)"
        viewBox="0 0 217 217"
      >
        <title>
          Prev
        </title>
        <g
          transform="matrix(1,0,0,1,108.55,108.721)"
        >
          <g
            transform="matrix(6.12323e-17,-1,1,6.12323e-17,0,0)"
          >
            <path
              d="M138.141,158.426c-0.650773,0.080458 -1.30311,-0.136988 -1.77545,-0.591818l-59.1818,-46.7536c-0.731607,-0.570007 -1.16659,-1.43998 -1.18364,-2.36727c0.147609,-0.890133 0.560095,-1.71511 1.18364,-2.36727l59.1818,-46.7536c1.30741,-0.980556 3.16217,-0.71559 4.14273,0.591818c0.980556,1.30741 0.71559,3.16217 -0.591818,4.14273l-56.2227,44.3864l56.2227,44.3864c1.0494,1.11878 1.28598,2.77487 0.591818,4.14273c-0.652167,0.623542 -1.47714,1.03603 -2.36727,1.18364v0Z"
              transform="matrix(1,0,0,1,-108.55,-108.721)"
            />
          </g>
        </g>
      </svg>
    </span>
  </button>
  <button
    class="c2 c3"
    type="button"
  >
    <span>
      <svg
        aria-hidden="false"
        aria-labelledby="title"
        focusable="false"
        role="img"
        style="vertical-align:middle;fill:currentColor;width:20px;height:20px;transform:rotate(-90deg)"
        viewBox="0 0 217 217"
      >
        <title>
          Next
        </title>
        <g
          transform="matrix(1,0,0,1,108.55,108.721)"
        >
          <g
            transform="matrix(6.12323e-17,-1,1,6.12323e-17,0,0)"
          >
            <path
              d="M138.141,158.426c-0.650773,0.080458 -1.30311,-0.136988 -1.77545,-0.591818l-59.1818,-46.7536c-0.731607,-0.570007 -1.16659,-1.43998 -1.18364,-2.36727c0.147609,-0.890133 0.560095,-1.71511 1.18364,-2.36727l59.1818,-46.7536c1.30741,-0.980556 3.16217,-0.71559 4.14273,0.591818c0.980556,1.30741 0.71559,3.16217 -0.591818,4.14273l-56.2227,44.3864l56.2227,44.3864c1.0494,1.11878 1.28598,2.77487 0.591818,4.14273c-0.652167,0.623542 -1.47714,1.03603 -2.36727,1.18364v0Z"
              transform="matrix(1,0,0,1,-108.55,-108.721)"
            />
          </g>
        </g>
      </svg>
    </span>
  </button>
</div>
`;

exports[`Snapshots Pagination with custom description 1`] = `
.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  padding: 0.5em 1em;
  border: 1px currentColor solid;
  background-color: transparent;
  border-radius: 2px;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  text-align: center;
  cursor: pointer;
  outline: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-color: #B4B4B4;
  color: #535353;
}

.c2:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c2 .c4 {
  color: #535353;
}

.c2:hover:enabled,
.c2:active:enabled {
  background-color: #F1F1F1;
}

.c2:active:enabled,
.c2:focus:enabled {
  box-shadow: 0 0 0 4px rgba(180,180,180,0.2);
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  padding-right: 0.6em;
}

.c3 {
  padding: 0.5em;
}

<div
  class="c0"
>
  <span
    class="c1"
  >
    blah 1-20 of 40
  </span>
  <button
    class="c2 c3"
    disabled=""
    type="button"
  >
    <span>
      <svg
        aria-hidden="false"
        aria-labelledby="title"
        focusable="false"
        role="img"
        style="vertical-align:middle;fill:currentColor;width:20px;height:20px;transform:rotate(90deg)"
        viewBox="0 0 217 217"
      >
        <title>
          Prev
        </title>
        <g
          transform="matrix(1,0,0,1,108.55,108.721)"
        >
          <g
            transform="matrix(6.12323e-17,-1,1,6.12323e-17,0,0)"
          >
            <path
              d="M138.141,158.426c-0.650773,0.080458 -1.30311,-0.136988 -1.77545,-0.591818l-59.1818,-46.7536c-0.731607,-0.570007 -1.16659,-1.43998 -1.18364,-2.36727c0.147609,-0.890133 0.560095,-1.71511 1.18364,-2.36727l59.1818,-46.7536c1.30741,-0.980556 3.16217,-0.71559 4.14273,0.591818c0.980556,1.30741 0.71559,3.16217 -0.591818,4.14273l-56.2227,44.3864l56.2227,44.3864c1.0494,1.11878 1.28598,2.77487 0.591818,4.14273c-0.652167,0.623542 -1.47714,1.03603 -2.36727,1.18364v0Z"
              transform="matrix(1,0,0,1,-108.55,-108.721)"
            />
          </g>
        </g>
      </svg>
    </span>
  </button>
  <button
    class="c2 c3"
    type="button"
  >
    <span>
      <svg
        aria-hidden="false"
        aria-labelledby="title"
        focusable="false"
        role="img"
        style="vertical-align:middle;fill:currentColor;width:20px;height:20px;transform:rotate(-90deg)"
        viewBox="0 0 217 217"
      >
        <title>
          Next
        </title>
        <g
          transform="matrix(1,0,0,1,108.55,108.721)"
        >
          <g
            transform="matrix(6.12323e-17,-1,1,6.12323e-17,0,0)"
          >
            <path
              d="M138.141,158.426c-0.650773,0.080458 -1.30311,-0.136988 -1.77545,-0.591818l-59.1818,-46.7536c-0.731607,-0.570007 -1.16659,-1.43998 -1.18364,-2.36727c0.147609,-0.890133 0.560095,-1.71511 1.18364,-2.36727l59.1818,-46.7536c1.30741,-0.980556 3.16217,-0.71559 4.14273,0.591818c0.980556,1.30741 0.71559,3.16217 -0.591818,4.14273l-56.2227,44.3864l56.2227,44.3864c1.0494,1.11878 1.28598,2.77487 0.591818,4.14273c-0.652167,0.623542 -1.47714,1.03603 -2.36727,1.18364v0Z"
              transform="matrix(1,0,0,1,-108.55,-108.721)"
            />
          </g>
        </g>
      </svg>
    </span>
  </button>
</div>
`;

exports[`Snapshots Pagination with custom text buttons 1`] = `
.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  padding: 0.5em 1em;
  border: 1px currentColor solid;
  background-color: transparent;
  border-radius: 2px;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  text-align: center;
  cursor: pointer;
  outline: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-color: #B4B4B4;
  color: #535353;
}

.c2:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c2 .c3 {
  color: #535353;
}

.c2:hover:enabled,
.c2:active:enabled {
  background-color: #F1F1F1;
}

.c2:active:enabled,
.c2:focus:enabled {
  box-shadow: 0 0 0 4px rgba(180,180,180,0.2);
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  padding-right: 0.6em;
}

<div
  class="c0"
>
  <span
    class="c1"
  >
    Viewing 1-20 of 40
  </span>
  <button
    class="c2 "
    disabled=""
    type="button"
  >
    <span>
      blah
    </span>
  </button>
  <button
    class="c2 "
    type="button"
  >
    <span>
      lala
    </span>
  </button>
</div>
`;

exports[`Snapshots Pagination with default value 1`] = `
.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  padding: 0.5em 1em;
  border: 1px currentColor solid;
  background-color: transparent;
  border-radius: 2px;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  text-align: center;
  cursor: pointer;
  outline: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-color: #B4B4B4;
  color: #535353;
}

.c2:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c2 .c4 {
  color: #535353;
}

.c2:hover:enabled,
.c2:active:enabled {
  background-color: #F1F1F1;
}

.c2:active:enabled,
.c2:focus:enabled {
  box-shadow: 0 0 0 4px rgba(180,180,180,0.2);
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  padding-right: 0.6em;
}

.c3 {
  padding: 0.5em;
}

<div
  class="c0"
>
  <span
    class="c1"
  >
    Viewing 1-20 of 40
  </span>
  <button
    class="c2 c3"
    disabled=""
    type="button"
  >
    <span>
      <svg
        aria-hidden="false"
        aria-labelledby="title"
        focusable="false"
        role="img"
        style="vertical-align:middle;fill:currentColor;width:20px;height:20px;transform:rotate(90deg)"
        viewBox="0 0 217 217"
      >
        <title>
          Prev
        </title>
        <g
          transform="matrix(1,0,0,1,108.55,108.721)"
        >
          <g
            transform="matrix(6.12323e-17,-1,1,6.12323e-17,0,0)"
          >
            <path
              d="M138.141,158.426c-0.650773,0.080458 -1.30311,-0.136988 -1.77545,-0.591818l-59.1818,-46.7536c-0.731607,-0.570007 -1.16659,-1.43998 -1.18364,-2.36727c0.147609,-0.890133 0.560095,-1.71511 1.18364,-2.36727l59.1818,-46.7536c1.30741,-0.980556 3.16217,-0.71559 4.14273,0.591818c0.980556,1.30741 0.71559,3.16217 -0.591818,4.14273l-56.2227,44.3864l56.2227,44.3864c1.0494,1.11878 1.28598,2.77487 0.591818,4.14273c-0.652167,0.623542 -1.47714,1.03603 -2.36727,1.18364v0Z"
              transform="matrix(1,0,0,1,-108.55,-108.721)"
            />
          </g>
        </g>
      </svg>
    </span>
  </button>
  <button
    class="c2 c3"
    type="button"
  >
    <span>
      <svg
        aria-hidden="false"
        aria-labelledby="title"
        focusable="false"
        role="img"
        style="vertical-align:middle;fill:currentColor;width:20px;height:20px;transform:rotate(-90deg)"
        viewBox="0 0 217 217"
      >
        <title>
          Next
        </title>
        <g
          transform="matrix(1,0,0,1,108.55,108.721)"
        >
          <g
            transform="matrix(6.12323e-17,-1,1,6.12323e-17,0,0)"
          >
            <path
              d="M138.141,158.426c-0.650773,0.080458 -1.30311,-0.136988 -1.77545,-0.591818l-59.1818,-46.7536c-0.731607,-0.570007 -1.16659,-1.43998 -1.18364,-2.36727c0.147609,-0.890133 0.560095,-1.71511 1.18364,-2.36727l59.1818,-46.7536c1.30741,-0.980556 3.16217,-0.71559 4.14273,0.591818c0.980556,1.30741 0.71559,3.16217 -0.591818,4.14273l-56.2227,44.3864l56.2227,44.3864c1.0494,1.11878 1.28598,2.77487 0.591818,4.14273c-0.652167,0.623542 -1.47714,1.03603 -2.36727,1.18364v0Z"
              transform="matrix(1,0,0,1,-108.55,-108.721)"
            />
          </g>
        </g>
      </svg>
    </span>
  </button>
</div>
`;

exports[`Snapshots Pagination with text buttons 1`] = `
.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  padding: 0.5em 1em;
  border: 1px currentColor solid;
  background-color: transparent;
  border-radius: 2px;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  text-align: center;
  cursor: pointer;
  outline: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-color: #B4B4B4;
  color: #535353;
}

.c2:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c2 .c3 {
  color: #535353;
}

.c2:hover:enabled,
.c2:active:enabled {
  background-color: #F1F1F1;
}

.c2:active:enabled,
.c2:focus:enabled {
  box-shadow: 0 0 0 4px rgba(180,180,180,0.2);
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  padding-right: 0.6em;
}

<div
  class="c0"
>
  <span
    class="c1"
  >
    Viewing 1-20 of 40
  </span>
  <button
    class="c2 "
    disabled=""
    type="button"
  >
    <span>
      Prev
    </span>
  </button>
  <button
    class="c2 "
    type="button"
  >
    <span>
      Next
    </span>
  </button>
</div>
`;
